--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
+<!--      <version>8.0.14</version>-->
       <version>5.1.41</version>
       <scope>runtime</scope>
     </dependency>
